实现真正的自由列表分配算法
实现find_suitable_block查找合适的自由块
实现remove_from_free_list移除已分配的块
实现allocate_from_free_list核心分配逻辑
更新主allocate方法使用自由列表而非直接分配
添加动态堆扩展当自由列表为空时
完成从占位符到功能性内存分配器的转变

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@ results/*.csv
 # Temporary files
 *.tmp
 *~
+
+# Development progress and notes (not for version control)
+PROGRESS.md
+NOTES.md
+TODO.md
